# dog_classification_tg_bot

./: .env.template  .gitignore  .pre-commit-config.yaml  LICENSE  dog-breed-resnet-inceptionv3.ipynb  pyproject.toml
photo_enhancer_tg_bot/cache/: redis.py
photo_enhancer_tg_bot/core/: config.py  loader.py  logger.py
tests/test_cache/: test_serialization.py
tests/test_core/: test_config.py  test_loader.py  test_logger.py
