[tool.poetry]
name = "photo-enhancer-tg-bot"
version = "0.1.0"
description = ""
authors = ["Michil Trofimov <trofimov.michil@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^3.3.0"
pydantic-settings = "^2.1.0"
aioredis = "^2.0.1"
aioboto3 = "^13.1.1"
multidict = "^6.1.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-async-sqlalchemy = "^0.2.0"
factory-boy = "^3.3.0"
pytest-dotenv = "^0.5.2"
pytest-cov = "^4.1.0"
pytest-unordered = "^0.5.2"
pytest-xdist = "^3.3.1"
pytest-freezegun = "^0.4.2"
pre-commit = "^3.3.3"
redis = "^5.2.0"
loguru = "^0.7.2"
requests = "^2.32.3"
alembic = "^1.14.0"
sqlalchemy = {version = "^2.0.36", extras = ["asyncio"]}
sqlalchemy-utils = "^0.41.2"
aiomysql = "^0.2.0"
greenlet = "^3.1.1"
asyncpg = "^0.30.0"
orjson = "^3.10.11"
cachetools = "^5.5.0"
python-gitlab = "^5.0.0"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
